--- a/src/reinforcement_planning/package.xml
+++ b/src/reinforcement_planning/package.xml
@@ -8,6 +8,8 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>nav2_msgs</depend>
+  <depend>navigation2</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
@@ -16,3 +18,5 @@
     <build_type>ament_cmake</build_type>
   </export>
 </package>
+
+
